chore(refactoring): Used List.of to maintain consistency